change group name

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div id="profile" class="clearfix">
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
-                                <h2>[Group Name]</h2>
+                                <h2>[My Group]</h2>
                                 <h3>Mayo Clinic</h3>
                             </div>
                             
