--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Transparent Medical Care</title>
+        <title>Smart Health Lab</title>
 
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="content-language" content="it" />
-        <meta name="keywords" content="health informatic research,health informatics research at UNC Charlotte,Charlotte area health informatics research group,health informatics lab, health informatics lab uncc, uncc health informatics lab, unc charlotte health informatics lab,health informatics lab unc charlotte" />
+        <meta name="keywords" content="health informatic research,health informatics research at Mayo Clinic, Minnesota area health informatics research group,health informatics lab, health informatics mayo clinic, mayo clinic smart health lab, mayo smart health lab,smart health lab mayo" />
         <meta name="description" content="The health informatics lab was established on Jan 2014 by Dr. Yaorong Ge and Dr. Lixia Yao to develop and apply data mining technologies to uncover new clinical knowledge and to improve the quality, safety, efficiency and effectiveness of healthcare. The lab is located at and affiliated with the department of software and information systems at UNC Charlotte. Currently, the lab has three principal investigators, four Ph.D. students, and several master students working on various research projects. For details about the ongoing researches in the lab, please refer to the research page. The lab members also intensively evolve in health informatics educational activities, such as teaching, seminar and journal club. Information about those activities could be found in the teaching, events and news pages." />
         <meta name="robots" content="all" />
         <meta name="revisit-after" content="7 days" />
