--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="pagecontents">
                         <div class="section color-1">
                             <div class="section-container">
-                                <h3 class="title">Yao, Lixia</h3>
+                                <h3 class="title">Welcome to The Yao Lab at Mayo Clinic</h3>
                                 <!--<h1 class=""></h1>-->
                                 <ul class="list-unstyled">
                                     <li>Ph.D. | Assistant Professor</li>
