--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
                                 <h3 class="title">Welcome to The Yao Lab at Mayo Clinic</h3>
                                 <!--<h1 class=""></h1>-->
                                 <ul class="list-unstyled">
-                                    <li>Ph.D. | Assistant Professor</li>
-                                    <li>Division of Biomedical Statistics and Informatics</li>
-                                    <li>Mayo Clinic</li>
+                                    <li>My name is Lixia Yao and I am an Assistant Professor in the Department of Health Sciences Research at Mayo Clinic. I received my Ph.D. degree in Biomedical Informatics from Columbia University in 2010. I then worked as a Principal Investigator at GlaxoSmithKline Pharmaceuticals and the University of North Carolina at Charlotte as an assistant professor prior to Mayo Clinic. My lab is made up of data scientists and healthcare professionals. Our research focuses on mining, integrating, and transforming unstructured, incomplete, and noisy data (i.e., electronic health records and claims databases, literature, patents, and social media) into meaningful biomedical knowledge and informatics applications, with the goal of improving patient-centered care. By collaborating with world-class scholars and clinicians, we have published in several high-profile journals including Nature Biotechnology and Genome Research. I am also the recipient of Career Development Award in Biomedical Informatics from the National Library of Medicine for 2016-2019.</li>
                                 </ul>
-                                <p>[place holder]</p>
+                                <p>Contact Us</p>
                                 <ul class="list-unstyled">
+                                    <li>Lixia Yao, PhD</li>
+                                    <li>Assistant Professor</li>
+                                    <li>Department of Health Sciences Research</li>
+                                    <li>Mayo Clinic</li>
                                     <li>
                                         <strong><i class="icon-phone"></i>&nbsp;&nbsp;</strong>
                                         <span>507 293 7953</span>
