remove all uncc

--- a/miscellanea.html
+++ b/miscellanea.html
@@ -47,12 +47,12 @@
     </ul>
     <h3 id="misc_link"><strong>Related Links:</strong></h3>
     <ul>
-        <li><a href="https://hi.uncc.edu/">The Health Informatics Program at UNC Charlotte</a></li>
-        <li><a href="http://dsba.uncc.edu/">The Data Science and Business Analytics at UNC Charlotte</a></li>
-        <li><a href="http://complexity.uncc.edu/">The Complex Systems Institute at Charlotte</a></li>
-        <li><a href="http://sis.uncc.edu/">Department of Software and Information Systems at UNC Charlotte </a></li>
-        <li><a href="http://cci.uncc.edu/">College of Computing and Informatics at UNC Charlotte</a></li>
-        <li><a href="https://cci-hit.uncc.edu/dir/">Dataset Information Resources (DIR) Framework</a></li>
+        <!--<li><a href="https://hi.uncc.edu/">The Health Informatics Program at UNC Charlotte</a></li>-->
+        <!--<li><a href="http://dsba.uncc.edu/">The Data Science and Business Analytics at UNC Charlotte</a></li>-->
+        <!--<li><a href="http://complexity.uncc.edu/">The Complex Systems Institute at Charlotte</a></li>-->
+        <!--<li><a href="http://sis.uncc.edu/">Department of Software and Information Systems at UNC Charlotte </a></li>-->
+        <!--<li><a href="http://cci.uncc.edu/">College of Computing and Informatics at UNC Charlotte</a></li>-->
+        <!--<li><a href="https://cci-hit.uncc.edu/dir/">Dataset Information Resources (DIR) Framework</a></li>-->
     </ul>
     <h3 id="misc_coll"><strong>Collaborations:</strong></h3>
     <ul>
