--- a/people.html
+++ b/people.html
@@ -17,7 +17,7 @@
             <table class="table">
                 <tr>
                     <td>
-                        <img src="images/lixia-yao.png" alt="Lixia Yao - UNCC Health Informatics Lab" />
+                        <img src="images/lixia-yao.png" alt="Lixia Yao" />
                     </td>
                     <td>
                         <strong>Lixia Yao</strong>, Ph.D.<br>
