--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<meta http-equiv="content-language" content="it" />
 	<meta name="keywords" content="biomedical informatics research, medical informatics research, clinical informatics research, health informatic research, patient-centered care research, data mining research, text mining, natural language processing, Mayo Clinic, Minnesota health informatics research, health informatics lab, health informatics mayo, health informatics mayo clinic, mayo clinic the Yao lab, artificial intelligence in patient-centered care" />
 	<meta name="description" content="Lixia Yao, PhD, is an Assistant Professor in the Department of Health Sciences Research at Mayo Clinic. She received her Ph.D. degree in Biomedical Informatics from Columbia University in 2010. She then worked as a Principal Investigator at GlaxoSmithKline Pharmaceuticals and the University of North Carolina at Charlotte as an assistant professor prior to Mayo. Her research focuses on mining, integrating, and transforming unstructured, incomplete, and noisy data (i.e., electronic health records and claims databases, literature, patents, and social media) into meaningful biomedical knowledge and informatics applications. By leading a team of data scientists and healthcare professionals at the Health Informatics Lab, and by collaborating with world-class scholars and clinicians, she has published in several high-profile journals including Nature Biotechnology and Genome Research. She is also the recipient of Career Development Award in Biomedical Informatics from the National Library of Medicine for 2016-2019." />
-
 	<meta name="robots" content="all" />
 	<meta name="revisit-after" content="7 days" />
 
@@ -19,7 +18,7 @@
 	<!-- Bootstrap core JavaScript -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/js/mdb.min.js"></script>
+	<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/js/mdb.min.js"></script>-->
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 
@@ -81,17 +80,19 @@
 								<div class="carousel-item active view overlay">
 									<a href="page.html?p=Boshu-Ru-Mining-Social-Media-for-Drug-Serendipitous-Usage">
 										<img class="img-fluid" src="newsfiles/DrugRepo_Story/Social_media_mining.jpg"/>
+										<div class="myoverlay">Identify serendipitous drug usages in the patient forum data</div>
 									</a>
-									<div class="myoverlay">My Name is John</div>
 								</div>
 								<div class="carousel-item">
-									<a href="http://suar.orgsync.com/org/gpsguncc/GRS">
+									<a href="page.html?p=BRu-ICDM2015">
 										<img class="img-fluid" src="newsfiles/BRu_ICDM/2015BestPaper.jpg"/>
+										<div class="myoverlay">Boshu won best paper award at 2015 ICDM DMBIH Workshop</div>
 									</a>
 								</div>
 								<div class="carousel-item">
 									<a href="page.html?p=health-ROI-story">
 										<img class="img-fluid" src="newsfiles/ROI/Yao-Novel-health-ROI.jpg"/>
+										<div class="myoverlay">Dr. Yao develops novel health ROI to optimize biomedical resource allocations</div>
 									</a>
 								</div>
 							</div>
