--- a/page.html
+++ b/page.html
@@ -6,8 +6,8 @@
     <title>The Yao Lab at Mayo Clinic</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="content-language" content="it" />
-    <meta name="keywords" content="health informatic research,health informatics research at UNC Charlotte,Charlotte area health informatics research group,health informatics lab, health informatics lab uncc, uncc health informatics lab, unc charlotte health informatics lab,health informatics lab unc charlotte" />
-    <meta name="description" content="The health informatics lab was established on Jan 2014 by Dr. Yaorong Ge and Dr. Lixia Yao to develop and apply data mining technologies to uncover new clinical knowledge and to improve the quality, safety, efficiency and effectiveness of healthcare. The lab is located at and affiliated with the department of software and information systems at UNC Charlotte. Currently, the lab has three principal investigators, four Ph.D. students, and several master students working on various research projects. For details about the ongoing researches in the lab, please refer to the research page. The lab members also intensively evolve in health informatics educational activities, such as teaching, seminar and journal club. Information about those activities could be found in the teaching, events and news pages." />
+    <meta name="keywords" content="biomedical informatics research, medical informatics research, clinical informatics research, health informatic research, patient-centered care research, data mining research, text mining, natural language processing, Mayo Clinic, Minnesota health informatics research, health informatics lab, health informatics mayo, health informatics mayo clinic, mayo clinic the Yao lab, artificial intelligence in patient-centered care" />
+    <meta name="description" content="Lixia Yao, PhD, is an Assistant Professor in the Department of Health Sciences Research at Mayo Clinic. She received her Ph.D. degree in Biomedical Informatics from Columbia University in 2010. She then worked as a Principal Investigator at GlaxoSmithKline Pharmaceuticals and the University of North Carolina at Charlotte as an assistant professor prior to Mayo. Her research focuses on mining, integrating, and transforming unstructured, incomplete, and noisy data (i.e., electronic health records and claims databases, literature, patents, and social media) into meaningful biomedical knowledge and informatics applications. By leading a team of data scientists and healthcare professionals at the Health Informatics Lab, and by collaborating with world-class scholars and clinicians, she has published in several high-profile journals including Nature Biotechnology and Genome Research. She is also the recipient of Career Development Award in Biomedical Informatics from the National Library of Medicine for 2016-2019." />
     <meta name="robots" content="all" />
     <meta name="revisit-after" content="7 days" />
 
@@ -18,7 +18,7 @@
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/js/mdb.min.js"></script>
+    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/js/mdb.min.js"></script>-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 
@@ -48,7 +48,6 @@
     <div id="header">
         <div id="imageBg">
             <div class="inside">
-                <!--<a href="http://www.uncc.edu" title="www.uncc.edu" id="logo"><img src="images/uncc-logo.gif" alt="UNCC logo" /></a>-->
                 <h1><a href="index.html" title="The Health Informatics Lab - Home" id="hlinks">The Yao Lab at Mayo Clinic</a></h1>
             </div>
         </div>
