--- a/miscellanea.html
+++ b/miscellanea.html
@@ -1,15 +1,15 @@
 <div class="inside">
-    <div class="dropdown">
-        <button class="dropbtn">Jump To</button>
-        <div class="dropdown-content">
-            <a href="#blog">Blog</a>
-            <a href="#misc_conf">Major Conferences in Health Informatics</a>
-            <a href="#misc_jour">Major Journals in Health Informatics</a>
-            <a href="#misc_link">Related Links</a>
-            <a href="#misc_coll">Collaborations</a>
-            <a href="#qna">Questions &amp; Answers</a>
-        </div>
-    </div>
+    <!--<div class="dropdown">-->
+        <!--<button class="dropbtn">Jump To</button>-->
+        <!--<div class="dropdown-content">-->
+            <!--<a href="#blog">Blog</a>-->
+            <!--<a href="#misc_conf">Major Conferences in Health Informatics</a>-->
+            <!--<a href="#misc_jour">Major Journals in Health Informatics</a>-->
+            <!--<a href="#misc_link">Related Links</a>-->
+            <!--<a href="#misc_coll">Collaborations</a>-->
+            <!--<a href="#qna">Questions &amp; Answers</a>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <h3 id="blog"><strong>Blogs: </strong></h3>
     <p>Rather than hiding herself in a corner to research on theoretical problems,
