--- a/people.html
+++ b/people.html
@@ -1,14 +1,14 @@
 <link href="css/people.css" rel="stylesheet" type="text/css" />
 <div class="inside">
-    <div class="dropdown">
-        <button class="dropbtn">Jump To</button>
-        <div class="dropdown-content">
-            <a href="#pi">Principle Investigator</a>
-            <a href="#ss">Support Staff</a>
-            <a href="#ra">Research Associate and Fellow</a>
-            <a href="#al">Alumni</a>
-        </div>
-    </div>
+    <!--<div class="dropdown">-->
+        <!--<button class="dropbtn">Jump To</button>-->
+        <!--<div class="dropdown-content">-->
+            <!--<a href="#pi">Principle Investigator</a>-->
+            <!--<a href="#ss">Support Staff</a>-->
+            <!--<a href="#ra">Research Associate and Fellow</a>-->
+            <!--<a href="#al">Alumni</a>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div id="people_page">
     <div class="people panel">
