--- a/index.html
+++ b/index.html
@@ -61,78 +61,48 @@
 			<li><a href="page.html?p=resource" title="Project resources">Resources</a></li>
 			<li><a href="page.html?p=news" title="News">News</a></li>
 			<li><a href="page.html?p=miscellanea" title="Blogs, Conferences, Journals, Related Links and Collaborations">Miscellanea</a></li>
+			<li><a href="page.html?p=about">About</a></li>
 		</ul>
 		<form action="http://www.google.com/search" method="get" target="_google" id="tm-utility-search" onsubmit="var searchbox = document.getElementById('tm-utility-search-input'); if (searchbox.value == 'Search this site' || searchbox.value == '') { searchbox.value=''; searchbox.focus(); return false; }">
 			<input type="hidden" name="hl" value="en"/>
-			<input type="hidden" name="domains" value="hu4869.github.io/"/>
-			<input type="hidden" name="sitesearch" value="hu4869.github.io/"/>
+			<input type="hidden" name="domains" value="lixiayao.github.io/"/>
+			<input type="hidden" name="sitesearch" value="lixiayao.github.io/"/>
 			<input type="text" name="q" class="searchbox" value="Search this site" size="25" maxlength="100" title="Search this site" onclick="if (this.value == 'Search this site') { this.value = ''; }" id="tm-utility-search-input"/>
 			<div class="mybtn"><input type="submit" value="" /></div>
 		</form>
 	</div>
 	<div id="content">
 		<div class="inside">
-			<div class="row">
-				<div class="col-md-6">
-					<div id="gallery_wrap">
-						<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner" style="height: 270px;">
-								<div class="carousel-item active view overlay">
-									<a href="page.html?p=Boshu-Ru-Mining-Social-Media-for-Drug-Serendipitous-Usage">
-										<img class="img-fluid" src="newsfiles/DrugRepo_Story/Social_media_mining.jpg"/>
-										<div class="myoverlay">Identify serendipitous drug usages in the patient forum data</div>
-									</a>
-								</div>
-								<div class="carousel-item">
-									<a href="page.html?p=BRu-ICDM2015">
-										<img class="img-fluid" src="newsfiles/BRu_ICDM/2015BestPaper.jpg"/>
-										<div class="myoverlay">Boshu won best paper award at 2015 ICDM DMBIH Workshop</div>
-									</a>
-								</div>
-								<div class="carousel-item">
-									<a href="page.html?p=health-ROI-story">
-										<img class="img-fluid" src="newsfiles/ROI/Yao-Novel-health-ROI.jpg"/>
-										<div class="myoverlay">Dr. Yao develops novel health ROI to optimize biomedical resource allocations</div>
-									</a>
-								</div>
-							</div>
-							<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-								<span class="sr-only">Previous</span>
+			<div id="gallery_wrap">
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner" style="height: calc(100vh - 300px);">
+						<div class="carousel-item active view overlay">
+							<a href="https://www.mayoclinic.org/">
+								<img class="img-fluid" src="images/Mayo.jpg"/>
+								<div class="myoverlay">Mayo Clinic</div>
 							</a>
-							<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-								<span class="carousel-control-next-icon" aria-hidden="true"></span>
-								<span class="sr-only">Next</span>
+						</div>
+						<div class="carousel-item">
+							<a href="page.html?p=BRu-ICDM2015">
+								<img class="img-fluid" src="newsfiles/BRu_ICDM/2015BestPaper.jpg"/>
+								<div class="myoverlay">Boshu won best paper award at 2015 ICDM DMBIH Workshop</div>
+							</a>
+						</div>
+						<div class="carousel-item">
+							<a href="page.html?p=health-ROI-story">
+								<img class="img-fluid" src="newsfiles/ROI/Yao-Novel-health-ROI.jpg"/>
+								<div class="myoverlay">Dr. Yao develops novel health ROI to optimize biomedical resource allocations</div>
 							</a>
 						</div>
 					</div>
-					<div class="card" style="font-size:12px">
-						<div class="info card-body">
-							<h4><span>Contact Info:</span></h4>
-							<strong>Lixia Yao</strong>, Ph.D. <br>
-							Assistant Professor<br>
-							Division of Biomedical Statistics and Informatics<br>
-							Department of Health Sciences Research <br>
-
-							Email: Yao.Lixia At Mayo DoT edu<br>
-							Address: 200 First Street SW, Rochester, MN 55905 <br>
-							Phone: 507-293-7953<br>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<div class="info">
-						<b>Welcome</b> to the website of The Yao Lab at Mayo Clinic! My name is Lixia Yao and I am an Assistant Professor in the Department of Health Sciences Research at Mayo Clinic.	I received my Ph.D. degree in Biomedical Informatics from Columbia University in 2010.
-						I then worked as a Principal Investigator at GlaxoSmithKline Pharmaceuticals and the University of North Carolina at Charlotte
-						as an assistant professor prior to Mayo Clinic. My lab is made up of data scientists and healthcare professionals.
-						Our research focuses on mining, integrating, and transforming unstructured, incomplete, and noisy data
-						(i.e., electronic health records and claims databases, literature, patents, and social media)
-						into meaningful biomedical knowledge and informatics applications, with the goal of improving
-						<a href="https://catalyst.nejm.org/what-is-patient-centered-care/"><b>patient-centered care</b></a>.
-						By collaborating with world-class scholars and clinicians, we have published in several high-profile journals
-						including Nature Biotechnology and Genome Research. I am also the recipient of Career Development Award in
-						Biomedical Informatics from the National Library of Medicine for 2016-2019.
-					</div>
+					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
 			</div>
 			<div class="clear"></div>
