--- a/page.html
+++ b/page.html
@@ -61,11 +61,12 @@
             <li><a href ="page.html?p=resources" title="Project resources">Resources</a></li>
             <li><a href="page.html?p=news" title="News">News</a></li>
             <li><a href="page.html?p=miscellanea" title="Blogs, Conferences, Journals, Related Links and Collaborations">Miscellanea</a></li>
+            <li><a href="page.html?p=about">About</a></li>
         </ul>
         <form action="http://www.google.com/search" method="get" target="_google" id="tm-utility-search" onsubmit="var searchbox = document.getElementById('tm-utility-search-input'); if (searchbox.value == 'Search this site' || searchbox.value == '') { searchbox.value=''; searchbox.focus(); return false; }">
             <input type="hidden" name="hl" value="en"/>
-            <input type="hidden" name="domains" value="hu4869.github.io/"/>
-            <input type="hidden" name="sitesearch" value="hu4869.github.io/"/>
+            <input type="hidden" name="domains" value="lixiayao.github.io/"/>
+            <input type="hidden" name="sitesearch" value="lixiayao.github.io/"/>
             <input type="text" name="q" class="searchbox" value="Search this site" size="25" maxlength="100" title="Search this site" onclick="if (this.value == 'Search this site') { this.value = ''; }" id="tm-utility-search-input"/>
             <div class="mybtn"><input type="submit" value="" /></div>
         </form>
