--- a/news.html
+++ b/news.html
@@ -1,10 +1,10 @@
-<div class="inside" id="news">
-	<div class="news">
-		<div>
+
+	<div class="row news">
+		<div class="col-md-6">
 			<img alt="Boshu presents an information
 		  system to identify serendipitous drug usages in the patient forum data" src="newsfiles/DrugRepo_Story/Social_media_mining.jpg"/>
 		</div>
-		<div>
+		<div class="col-md-6">
 			<h2>Boshu builds an information system prototype to identify serendipitous drug usages in the patient forum data</h2>
 			<span>Feb-2017</span>
 			<p>Boshu Ru and his dissertation advisor Dr. Lixia Yao investigated whether social media data can be a new, independent data source to be combined with other existing data sources to generate stronger drug repositioning signals and reduce the false positive rate. This work was presented at the 10th International Conference on Health Informatics at Porto, Portugal (acceptance rate: 21%).
@@ -14,22 +14,22 @@
 			</a>
 		</div>
 	</div>
-	<div class="news">
-		<div>
+	<div class="row news">
+		<div class="col-md-6">
 			<img alt="Boshu and Yi joined Philips Research with internship positions Summer 2016" src="newsfiles/BRu_YZhen_Philips/Philips-shield-1.png"/>
 		</div>
-		<div>
+		<div class="col-md-6">
 			<h2>Congratulate Yi and Boshu for their summer interns with Philips Research</h2>
 			<span>May-2016</span>
 			<p>Our PhD students, Boshu Ru and Yi Zhen, joined Philips Research for two internship positions at Cambridge, Massachusetts during this summer. Boshu’s internship is focused on healthcare data analytics by developing data analytics prototypes and integrating large volumes of claim data with database techniques. Yi’s internship is primarily about applying natural language processing techniques to analyze clinical trial data for clinical bioinformatics purpose. Let's congratulate both of them!
 			</p>
 		</div>
 	</div>
-	<div class="news">
-		<div>
+	<div class="row news">
+		<div class="col-md-6">
 			<img alt="Dr. Lixia Yao received NLM Career Development Award" src="newsfiles/nlm.png"/>
 		</div>
-		<div>
+		<div class="col-md-6">
 			<h2>Dr. Yao receives career development award from NLM</h2>
 			<span>May-2016</span>
 			<p>Assistant Professor Lixia Yao, Ph.D., has been selected to receive a Career Development Award in Biomedical Informatics from the National Library of Medicine at the National Institute of Health. This very competitive award is designed to provide junior faculty the support and "protected time" for an intensive career development in biomedical informatics leading to research independence.
@@ -39,11 +39,11 @@
 			</a>
 		</div>
 	</div>
-	<div class="news">
-		<div>
+	<div class="row news">
+		<div class="col-md-6">
 			<img alt="Boshu Ru - 2015 Best Paper Award in Biomedical Informatics and Healthcare Data mining workshop - ICDM" src="newsfiles/BRu_ICDM/2015BestPaper.jpg" />
 		</div>
-		<div>
+		<div class="col-md-6">
 			<h2>Boshu won best paper award at 2015 ICDM DMBIH Workshop</h2>
 			<span>Nov-2015</span>
 			<p>Congratulations to Boshu Ru! He gave a presentation about evaluating the quality and quantity of medication outcome information in the social media on the 15th IEEE International Conference on Data Mining. This study unveiled the potential of social media as a complementary new data source for studying medication outcomes, and received the best paper award in the Data Mining in Biomedical Informatics and Healthcare Workshop.
@@ -53,11 +53,11 @@
 			</a>
 		</div>
 	</div>
-	<div class="news">
-		<div>
+	<div class="row news">
+		<div class="col-md-6">
 			<img alt="Dr. Yao - Novel health ROI" src="newsfiles/ROI/Yao-Novel-health-ROI.jpg" />
 		</div>
-		<div>
+		<div class="col-md-6">
 			<h2>Dr. Yao develops novel health ROI to optimize biomedical resource allocations</h2>
 			<span>Sep-2015</span>
 			<p>"Public and private entities that fund biomedical research face
@@ -74,11 +74,11 @@
 			</a>
 		</div>
 	</div>
-	<div class="news">
-		<div>
+	<div class="row news">
+		<div class="col-md-6">
 			<img alt="Kimberly Harris - AMIA annual symposium" src="newsfiles/amia-2015.jpg" />
 		</div>
-		<div>
+		<div class="col-md-6">
 			<h2>Kimberly to present at AMIA annual symposium</h2>
 			<span>Jul-2015</span>
 			<p>Congratulations to Kimberly Harris! She will be giving a podium presentation titled
@@ -91,11 +91,11 @@
 			</p>
 		</div>
 	</div>
-	<div class="news">
-		<div>
+	<div class="row news">
+		<div class="col-md-6">
 			<img alt="Boshu Ru - Graduate Research Symposium - UNCC" src="newsfiles/Boshu-Graduate-Research-Symposium-UNCC.jpg" />
 		</div>
-		<div>
+		<div class="col-md-6">
 			<h2>Boshu won the 3rd place at 15th annual GRS</h2>
 			<span>Apr-2015</span>
 			<p>Congratulations to Boshu Ru! He presented his work “What types of research paper do
@@ -107,11 +107,11 @@
 			</a>
 		</div>
 	</div>
-	<div class="news">
-		<div>
+	<div class="row news">
+		<div class="col-md-6">
 			<img alt="Boshu Ru Lixia Yao Jingyi Shi Yaorong Ge Yi Zhen - 2015 AMIA Joint Summits - Sanfrancisco CA" src="newsfiles/AMIA_2015_Joint_Summits_Present_files/2015-AMIA-Joint-Summits.jpg"/>
 		</div>
-		<div>
+		<div class="col-md-6">
 			<h2>Boshu, Jingyi &amp; Yi present ar the AMIA Joint Summits on Translational Science</h2>
 			<span>Mar-2015</span>
 			<p>Dr. Yaorong Ge, Dr. Lixia Yao, Yi Zhen, Boshu Ru and Jingyi Shi attended AMIA 2015
@@ -123,4 +123,3 @@
 			</p>
 		</div>
 	</div>
-</div>
