drop down on people section

--- a/news.html
+++ b/news.html
@@ -107,7 +107,7 @@
 			</a>
 		</div>
 	</div>
-	<div class="row news">
+	<div class="row news" id="news2015-3">
 		<div class="col-md-6">
 			<img alt="Boshu Ru Lixia Yao Jingyi Shi Yaorong Ge Yi Zhen - 2015 AMIA Joint Summits - Sanfrancisco CA" src="newsfiles/AMIA_2015_Joint_Summits_Present_files/2015-AMIA-Joint-Summits.jpg"/>
 		</div>
