--- a/people.html
+++ b/people.html
@@ -1,7 +1,7 @@
 
-    <div class="row section">
+    <div class="row section" id="pm">
         <div class="col-lg-12">
-           <h3>Principle Investigator</h3>:
+           <h1>Principle Investigator:</h1>
         </div>
     </div>
     <div class="row para last">
@@ -25,9 +25,9 @@
             <p>To find out more information about Dr. Yao, please refer to her <a href="files/CV-Lixia-Yao.pdf">CV</a>.</p>
         </div>
     </div>
-	<div class="row section">
+	<div class="row section" id="cm">
         <div class="col-lg-12">
-           <h3>Current Members</h3>:
+           <h1>Current Members:</h1>
         </div>
     </div>
     <div class="row para">
@@ -121,10 +121,12 @@
             </a>
             <div class="collapse" id="yueqibio">
                 <p>
-                    XXXX
+                    Yueqi Hu is a PhD student of Department of Computer Science, University of North Carolina at Charlotte, and a student member of Charlotte Visualization Center.
+                    Before that, she received her BS degree from Zhejiang University, China.
+                    She worked for Bosch Research & Technology Center, North America in 2010 and Nokia Research Center, Beijing in 2012.
                 </p>
             </div>
-            <p><strong>Degree:</strong> [tbs]</p>
+            <p><strong>Degree:</strong> BS Software Engineering, Zhejiang University, China (2010) </p>
         </div>
     </div>
     <div class="row para last">
@@ -142,23 +144,25 @@
             </a>
             <div class="collapse" id="mominabio">
                 <p>
-                    XXXX
+                    Syeda Momina Tabish is 4th year PhD student in the Department of Computer Science at the University of Iowa. She received BS in Computer Science from Islamia University Pakistan in 2006, MS in Information Technology from National University of Science and Technology (NUST) Pakistan in 2010 and MS in Computer Science from Michigan State University in 2012. She is a recipient of gold medal for outstanding academic performance by Islamia University and
+
+                    multiple performance-based scholarships throughout her undergraduate and graduate education. She has worked for two years at Broadcom and later at Qualcomm. Her research focuses on health data analytics, text mining, natural language processing and applied machine learning to solve real world information retrieval and biomedical problems.
                 </p>
             </div>
-            <p><strong>Degree:</strong> [tbs]</p>
+            <p><strong>Degree:</strong> MS Computer Science, Michigan State University, Michigan (2012) </p>
         </div>
     </div>
-    <div class="row section">
+    <div class="row section" id="alu">
         <div class="col-lg-12">
             <h3>Alumni</h3>:
         </div>
     </div>
-    <div class="row" id="alumni_page">
-        <table width="747" class="table">
+    <div class="row">
+        <table class="table">
             <tr>
-                <td width="176"><strong>Name</strong></td>
-                <td width="143"><strong>Time in the lab</strong></td>
-                <td width="432"><strong>Current Status</strong></td>
+                <td><strong>Name</strong></td>
+                <td><strong>Time in the lab</strong></td>
+                <td><strong>Current Status</strong></td>
             </tr>
             <tr>
                 <td>Boshu Ru</td>
