--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         ga('create', 'UA-53279809-1',   + 'auto');
         ga('send', 'pageview');
     </script>
-
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <span class="navbar-brand">Yao Lab @ Mayo Clinic</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -57,26 +56,39 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mobile">
                     <a class="nav-item nav-link" href="page.html?p=people.html">People</a>
+                </li>
+                <li class="nav-item dropdown desktop">
+                    <a class="nav-link dropdown-toggle" href="page.html?p=people.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        People
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="page.html?p=people.html#pm">Principle Investigator</a>
+                        <a class="dropdown-item" href="page.html?p=people.html#cm">Current Members</a>
+                        <a class="dropdown-item" href="page.html?p=people.html#alu">Alumni</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-item nav-link" href="page.html?p=research.html">Research</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="page.html?p=publication.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Publication
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="page.html?p=publication.html#Journal">Journal</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#conference">Conference</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#Short">Short Papers</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#Posters">Posters</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#book">Book Editor</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#other">Other publications</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#Presentations">Presentations</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="page.html?p=publication.html">Research</a>
                 </li>
+                <!--<li class="nav-item dropdown">-->
+                <!--<a class="nav-link dropdown-toggle" href="page.html?p=publication.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                <!--Publication-->
+                <!--</a>-->
+                <!--<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">-->
+                <!--<a class="dropdown-item" href="page.html?p=publication.html#Journal">Journal</a>-->
+                <!--<a class="dropdown-item" href="page.html?p=publication.html#conference">Conference</a>-->
+                <!--<a class="dropdown-item" href="page.html?p=publication.html#Short">Short Papers</a>-->
+                <!--<a class="dropdown-item" href="page.html?p=publication.html#Posters">Posters</a>-->
+                <!--<a class="dropdown-item" href="page.html?p=publication.html#book">Book Editor</a>-->
+                <!--<a class="dropdown-item" href="page.html?p=publication.html#other">Other publications</a>-->
+                <!--<a class="dropdown-item" href="page.html?p=publication.html#Presentations">Presentations</a>-->
+                <!--</div>-->
+                <!--</li>-->
                 <li class="nav-item">
                     <a class="nav-item nav-link" href="page.html?p=resources.html">Resource</a>
                 </li>
@@ -90,8 +102,9 @@
         </div>
     </div>
 </nav>
+
 <!-- End Navigation -->
-<div id="wall_wrap">
+<div id="wall_wrap" class="mobile">
     <div class="card">
         <a href="https://www.mayoclinic.org/">
             <img class="img-fluid" src="images/Mayo.jpg"/>
@@ -99,7 +112,7 @@
         </a>
     </div>
     <div class="card">
-        <a href="page.html">
+        <a href="page.html?p=news.html#news2015-3">
             <img class="img-fluid" src="newsfiles/AMIA_2015_Joint_Summits_Present_files/2015-AMIA-Joint-Summits.jpg"/>
             <div class="myoverlay">Boshu won best paper award at 2015 ICDM DMBIH Workshop</div>
         </a>
@@ -112,7 +125,7 @@
     </div>
 </div>
 
-<div id="gallery_wrap">
+<div id="gallery_wrap" class="desktop">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" style="height: calc(100vh - 40px);">
             <div class="carousel-item active view overlay">
@@ -122,7 +135,7 @@
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="page.html">
+                <a href="page.html?p=news.html#news2015-3">
                     <img class="img-fluid" src="newsfiles/AMIA_2015_Joint_Summits_Present_files/2015-AMIA-Joint-Summits.jpg"/>
                     <div class="myoverlay">Boshu won best paper award at 2015 ICDM DMBIH Workshop</div>
                 </a>
@@ -144,7 +157,6 @@
         </a>
     </div>
 </div>
-
 <!-- End Page Content -->
 <div id="copyright">
     Last modified on:
