--- a/page.html
+++ b/page.html
@@ -60,26 +60,39 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mobile">
                     <a class="nav-item nav-link" href="page.html?p=people.html">People</a>
+                </li>
+                <li class="nav-item dropdown desktop">
+                    <a class="nav-link dropdown-toggle" href="page.html?p=people.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    People
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="page.html?p=people.html#pm">Principle Investigator</a>
+                        <a class="dropdown-item" href="page.html?p=people.html#cm">Current Members</a>
+                        <a class="dropdown-item" href="page.html?p=people.html#alu">Alumni</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-item nav-link" href="page.html?p=research.html">Research</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="page.html?p=publication.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Publication
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="page.html?p=publication.html#Journal">Journal</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#conference">Conference</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#Short">Short Papers</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#Posters">Posters</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#book">Book Editor</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#other">Other publications</a>
-                        <a class="dropdown-item" href="page.html?p=publication.html#Presentations">Presentations</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="page.html?p=publication.html">Research</a>
                 </li>
+                <!--<li class="nav-item dropdown">-->
+                    <!--<a class="nav-link dropdown-toggle" href="page.html?p=publication.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                        <!--Publication-->
+                    <!--</a>-->
+                    <!--<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">-->
+                        <!--<a class="dropdown-item" href="page.html?p=publication.html#Journal">Journal</a>-->
+                        <!--<a class="dropdown-item" href="page.html?p=publication.html#conference">Conference</a>-->
+                        <!--<a class="dropdown-item" href="page.html?p=publication.html#Short">Short Papers</a>-->
+                        <!--<a class="dropdown-item" href="page.html?p=publication.html#Posters">Posters</a>-->
+                        <!--<a class="dropdown-item" href="page.html?p=publication.html#book">Book Editor</a>-->
+                        <!--<a class="dropdown-item" href="page.html?p=publication.html#other">Other publications</a>-->
+                        <!--<a class="dropdown-item" href="page.html?p=publication.html#Presentations">Presentations</a>-->
+                    <!--</div>-->
+                <!--</li>-->
                 <li class="nav-item">
                     <a class="nav-item nav-link" href="page.html?p=resources.html">Resource</a>
                 </li>
