new publication and research page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <a class="nav-item nav-link" href="page.html?p=research.html">Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item nav-link" href="page.html?p=publication.html">Research</a>
+                    <a class="nav-item nav-link" href="page.html?p=publication.html">Publication</a>
                 </li>
                 <!--<li class="nav-item dropdown">-->
                 <!--<a class="nav-link dropdown-toggle" href="page.html?p=publication.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
