--- a/publication.html
+++ b/publication.html
@@ -1,11 +1,12 @@
 <div class="inside">
+    <!--<h1>Publications</h1>-->
 
-    <h2 id="Journal">Peer Reviewed Articles - Journal:</h2>
+    <h3 id="Journal">Peer Reviewed Articles - Journal:</h3>
     <ol>
-        <li>Predicted Arabidopsis Interactome Resource and Gene Set Linkage Analysis: A Gene Set Annotation Tool. Yao H, Wang X, Chen P, Ling H, Kang J, <strong>Yao L</strong>, Mao C, and Chen X, Plant Physiology, (2018)</li>
-        <li>Public Opinions Toward Diseases: Infodemiological Study on News Media Data Characterizing public opinions towards diseases by mining news media data. Huang M, ElTayeby O, Zolnoori M, <strong>Yao L</strong>*. Journal of Medical Internet Research, 20(5):e10047 (2018)</li>
-        <li>A feasibility study on identifying drinking-related contents in Facebook through mining heterogeneous data. ElTayeby O, Eaglin T, Abdullah M, Burlinson D, Dou W, <strong>Yao L*</strong>. (accepted by the Health Informatics Journal)</li>
-        <li>MfeCNN: Mixture Feature Embedding Convolutional Neural Network for Data Li D, Huang M, Li X, Ruan <strong>Y, Yao</strong> L (accepted by IEEE transaction on NanoBioSciences)</li>
+      <li>MfeCNN: Mixture Feature Embedding Convolutional Neural Network for Data Mapping. Li D, Huang M, Li X, Ruan Y, <strong>Yao L</strong>. (early access, IEEE transaction on NanoBioSciences) (2018)</li>
+      <li>A feasibility study on identifying drinking-related contents in Facebook through mining heterogeneous data. ElTayeby O, Eaglin T, Abdullah M, Burlinson D, Dou W, <strong>Yao L*</strong>. (accepted by  the Health Informatics Journal) </li>
+<li>Public Opinions Toward Diseases: Infodemiological Study on News Media Data Characterizing public opinions towards diseases by mining news media data. Huang M, ElTayeby O, Zolnoori M, <strong>Yao L</strong>*. Journal of Medical Internet Research, 20(5):e10047 (2018)</li>
+      <li>Predicted Arabidopsis Interactome Resource and Gene Set Linkage Analysis: A Gene Set Annotation Tool. Yao H, Wang X, Chen P, Ling H, Kang J, <strong>Yao L</strong>, Mao C, and Chen X, Plant Physiology, pp.00144.2018, (2018)</li>
         <li>ADReCS-Target: target profiles for aiding drug safety research and application. Huang L, He Q, Liu K, Cheng J, Zhong M, Chen L, <strong>Yao L</strong>, Ji Z., Nucleic Acids Research 45 (D1): (2017)</li>
         <li>ADMETNet: the knowledgebase of pharmacokinetics and toxicology network. Xu Q, Liu K, Lin X, Qin Y, Chen L, Cheng J, Zhong M, He Q, Li Y, Wang T, Pan J, Peng M, <strong>Yao L</strong>, Ji Z., Journal of Genetics and Genomics, 44(5), 273-276, (2017)</li>
         <li>Evaluation of the informatician perspective: determining types of research papers preferred by clinicians. Ru B, Wang X, <strong>Yao L</strong>*, BMC Medical Informatics and Decision Making, 17(2): 74. (2017)</li>
@@ -21,9 +22,9 @@
         <li>Internet resources for proteins associated with drug therapeutic effects, adverse reactions, and ADME. Ji Z, Sun L, Chen X, Zheng C, <strong>Yao L</strong>, Han L, Cao Z, Wang J, Yeo WK, Cai C, and Chen Y. Drug Discovery Today, 8(12): 526-529. (2003)</li>
         <li>KDBI: kinetic data of bio-molecular interactions database. Ji Z, Chen X, Zheng C, <strong>Yao L</strong>, Han L, Yeo WK, Chung P, Puy H, Tay YT, Muhammad A, and Chen Y. Nucleic Acids Research, 31(1): 255-257. (2003)</li>
     </ol>
-    <h2 id="conference">Peer Reviewed Articles - Conference:</h2>
+    <h3 id="conference">Peer Reviewed Articles - Conference:</h3>
     <ol>
-        <li>&nbsp;A Publication-based Popularity Index for Healthcare Dataset Ranking. Shi J, Zheng M, <strong>Yao L</strong>, Ge Y. The Sixth IEEE International Conference on Healthcare Informatics (ICHI), New York, NY, (2018)</li>
+      <li>&nbsp;A Publication-based Popularity Index for Healthcare Dataset Ranking. Shi J, Zheng M, <strong>Yao L</strong>, Ge Y. The Sixth IEEE International Conference on Healthcare Informatics (ICHI), New York, NY, (2018)</li>
         <li>Terminology Enabled Spatio-Temporal Analysis and Visualization for Preterm Birth Data in the US. Wang K, <strong>Yao L</strong>. The 11<sup>th</sup> International Conference on Health Informatics (HEALTHINF), Funchal, Madeira, Portugal (2018)</li>
         <li>DIR &ndash; A semantic information resource for healthcare datasets. Shi J, Zheng M, <strong>Yao L</strong>, Ge Y. The IEEE International conference on Bioinformatics and Biomedicine (BIBM) 2017, Kansas City, MO (2017) (Acceptance rate: 19%)</li>
         <li>Visual FHIR: An Interactive Browser to Navigate HL7 FHIR Specification. Hong N, Wang K, <strong>Yao L</strong>, Jiang G. The Fifth IEEE International Conference on Healthcare Informatics (ICHI), The International Workshop of Knowledge Discovery in Translational Biomedical Informatics, Park City, UT (2017)</li>
@@ -34,6 +35,8 @@
     </ol>
     <p id="Short"><strong>Peer Reviewed Short Papers/Extended Abstracts:</strong></p>
     <ol>
+        <li>Probing Technology Innovation on Diseases via Patent Mining. Huang M. and <strong>Yao L</strong>. The American Medical Informatics Association Annual Symposium, San Francisco, 2018 </li>
+        <li>Characterizing treatment strategies of intrahepatic bile duct cancer by literature mining. H Guo, N Zhang, N Hong, <strong>L Yao</strong>, W Duan, Z Zhang. The 2nd International Workshop on Healthcare Knowledge Discovery and Management (IHKDM 2018), in conjunction with the IEEE International Conference on Healthcare Informatics (ICHI 2018), New York, NY 2018</li>
         <li>Integration of Accountable Care Organization and Additional Hospital Data into CMS Referral Analytics System. Ru B, Wu Q, Wang X, <strong>Yao L</strong>, Jia Y. The Fifth IEEE International Conference on Healthcare Informatics (ICHI 2017), Park City, Utah, 2017</li>
         <li>Identification of clinically meaningful clusters of multi-morbidity in a national cohort of adults using unsupervised learning. Ngufor C, McCoy R, <strong>Yao L</strong>, Sangaralingham L, Dunlay S, Shah N. The American Medical Informatics Association Annual Symposium, Washington DC, 2017</li>
         <li>A survey of social media for understanding patient-reported medication outcomes. Harris K, Ru B, <strong>Yao L*</strong>. The American Medical Informatics Association Annual Symposium, San Francisco, CA, 2015</li>
@@ -56,33 +59,6 @@
     <p id="other"><strong>Other publications:</strong></p>
     <ul>
         <li>
-            The application of information technology in drug discovery and development. <strong>Yao L</strong>*, Yang L, Overseas Scholars, a Journal of Chinese Association for Science and Technology, USA, 2013 (ISSN: 1556-861X)
-            <ul>
-                <li><strong>Manuscripts submitted:</strong>A literature review of social media based data mining for health outcomes research. Ru B, <strong>Yao L</strong>* (a book chapter contributed to <em>Social Web and Health Research</em>)</li>
-                <li>An intelligent, multi-source approach to facilitate accurate information for health providers. Matthew J. Cook, Thomas Agresta, <strong>Lixia Yao</strong>, Marie Smith, Xiaoyan Wang. (submitted to BMC Medical Informatics and Decision Making)</li>
-                <li>Detecting pharmacovigilance signals combining electronic medical records with spontaneous reports: a case study of conventional disease-modifying antirheumatic drugs for rheumatoid arthritis. Wang L, Mojarad M, Ji Z, Liu S, Liu K, Sungrim M, Shen F, Wang Y, <strong>Yao L</strong>, Davis J, Liu H. (submitted to Frontier in Pharmacology)</li>
-                <li>An interactive visualization tool for HL7 FHIR specification browsing and profiling. Hong N, Wang K, Wu S, Shen F, <strong>Yao L</strong>, Jiang G. (submitted to Journal of Health Informatics Research)</li>
-                <li>Birth weight-associated DNA methylation discordances in newborn monozygotic twins indicate sensitization of IFN-gamma immune response in low-birth-weight newborns. Hou N, Hai L, Gai W, Chan H, Pan J, Yao Q, <strong>Yao L</strong>, Xu C, Dong M, Zhou J, Zhu X, Wu Y, Ding G, Lu L, Sheng J, Chen X (submitted to The Journal of Pediatrics)</li>
-                <li>Developing a Healthcare Dataset Information Resource (DIR) Based on Semantic Web. Shi J, Zheng M, <strong>Yao L</strong>, Ge Y. (Submitted to BMC Medical Genomics)</li>
-                <li>Learning Complex Network for Systematic Drug Safety Profiling. Liu K, Xu H, Qin Y, Ding R, He Q, <strong>Yao L</strong>, You P, Xiang Y, Ji Z. (submitted to molecular systems biology)</li>
-                <li>Characterizing treatment strategies of intrahepatic bile duct cancer: Literature analysis using text mining. short paper submitted to The 2nd International Workshop on Healthcare Knowledge Discovery and Management (IHKDM 2018), in conjunction with the IEEE International Conference on Healthcare Informatics (ICHI 2018)</li>
-            </ul>
-        </li>
+        The application of information technology in drug discovery and development. <strong>Yao L</strong>*, Yang L, Overseas Scholars, a Journal of Chinese Association for Science and Technology, USA, 2013 (ISSN: 1556-861X)        </li>
     </ul>
-    <h2 id="Presentations"><strong>Conference Presentations:</strong></h2>
-    <ol>
-        <li>K. Harris, B. Ru, <strong>L. Yao</strong>, &amp;quot A survey of social media for understanding patient-reported medication outcomes&amp;quot , Podium presentation at the AMIA 2015 Annual Symposium, San Francisco, CA, November 2015.</li>
-        <li>B. Ru and <strong>L. Yao</strong>, &amp;quot A Survey of Clinicians' Literature Reading Preferences&amp;quot , American Medical Informatics Association (AMIA) Joint Summits on Translational Science, San Francisco, March 2015.</li>
-        <li>Y. Li and <strong>L. Yao</strong>, &amp;quot Systematic Evaluation of Unmet Medical Needs from Multiple Dimensionalities &ndash; A Feasibility Study&amp;quot , American Medical Informatics Association (AMIA) Annual Symposium, Washington DC, Nov 2013.</li>
-        <li><strong>L. Yao</strong>, &amp;quot Mining Electronic Health Records to Identify Drug Combinations&amp;quot , Poster presentation accepted by American Medical Informatics Association (AMIA) Annual Symposium, Chicago, IL, Nov. 2012</li>
-        <li><strong>L. Yao</strong>, &amp;quot Leveraging Electronic Health Records for Drug Discovery&amp;quot , Invited talk at Bio-IT World Conference &amp; Expo 2012, Boston, Apr. 2012</li>
-        <li>H. Xu, M. Zheng, Y. Yang, J. Carr, <strong>Y. Ge</strong>, &amp;quot Coronary artery remodeling in non-contrast CT&amp;quot , SPIE Medical Imaging: Computer Aided Diagnosis, vol. 8315, February 2012.</li>
-        <li><strong>L. Yao</strong>, &amp;quot Mining Electronic Health Records to Repositioning Drugs: a Feasibility Study&amp;quot , Poster presentation at American Medical Informatics Association (AMIA) Annual Symposium, Washington DC, Oct. 2011</li>
-        <li><strong>L. Yao</strong>, &amp;quot Benchmarking Ontologies: Bigger or Better? Oral presentation in the Highlight Track&amp;quot , 19th Annual International Conference on Intelligent Systems for Molecular Biology (ISMB), Vienna, Austria, Jul. 2011</li>
-        <li><strong>L. Yao</strong>, &amp;quot Model-Based Drug Development: How In-silico Approaches Are Reshaping the Clinical Enterprise&amp;quot Oral presentation at Drug Information Association 47th Annual Meeting, Chicago, IL, Jun. 2011</li>
-        <li><strong>L. Yao</strong>, &amp;quot Inside Pharmaceutical R&amp;D: a Computational Biologist's Perspective&amp;quot Invited talk at Peking University Health Science Center, Beijing, China, Dec. 2010</li>
-        <li><strong>L. Yao</strong>, &amp;quot Towards Mining Drug-Phenotype Data: Context-Based Calculation of Probabilistic Semantic Similarity&amp;quot Oral presentation at Pacific Symposium on Biocomputing (PSB), Big Island, Hawaii, Jan. 2010</li>
-        <li><strong>L. Yao</strong>, &amp;quot Quantitative Systems-Level Determinants of Drug Targets&amp;quot Poster presentation at NIH, Bethesda, Nov. 2009</li>
-        <li><strong>L. Yao</strong>, &amp;quot Quantitative Systems-Level Determinants of Drug Targets&amp;quot Poster presentation at International Conference on Intelligent Systems for Molecular Biology (ISMB), Toronto, Canada, Jul. 2008</li>
-    </ol>
 </div>
